@@ -5,15 +5,12 @@
 
 **Classes**
 
-* [`dhcp`](#dhcp): This class provides an input selector for configuring the DHCP server or client.  The client portion has not yet been implemented.
+* [`dhcp`](#dhcp): A selector for configuring the DHCP server or client
 * [`dhcp::dhcpd`](#dhcpdhcpd): This class is used to start dhcpd and create dhcpd.conf
 
 ## Classes
 
 ### dhcp
-
-This class provides an input selector for configuring the DHCP
-server or client.
 
 The client portion has not yet been implemented.
 
@@ -25,7 +22,7 @@ The following parameters are available in the `dhcp` class.
 
 Data type: `Boolean`
 
-
+Not yet implemented
 
 Default value: `false`
 
@@ -33,7 +30,7 @@ Default value: `false`
 
 Data type: `Boolean`
 
-
+Denotes that the system is a DHCP server
 
 Default value: `true`
 
@@ -45,12 +42,28 @@ This class is used to start dhcpd and create dhcpd.conf
 
 The following parameters are available in the `dhcp::dhcpd` class.
 
+##### `package_name`
+
+Data type: `String[1]`
+
+The DHCP server package name
+
+##### `enable_data_rsync`
+
+Data type: `Boolean`
+
+Enable the retrieval of the DHCP configuration from an rsync server
+
+* NOTE: This will be disabled by default at some point in the future
+
+Default value: `true`
+
 ##### `rsync_server`
 
-Data type: `String`
+Data type: `String[1]`
 
 The address of the server from which to pull the DHCPD
-configuration.
+configuration
 
 Default value: simplib::lookup('simp_options::rsync::server', { 'default_value' => '127.0.0.1' })
 
@@ -58,15 +71,25 @@ Default value: simplib::lookup('simp_options::rsync::server', { 'default_value' 
 
 Data type: `Stdlib::Compat::Integer`
 
-The connection timeout when communicating with the rsync server.
+The connection timeout when communicating with the rsync server
 
 Default value: simplib::lookup('simp_options::rsync::timeout', { 'default_value' => '2' })
+
+##### `dhcpd_conf`
+
+Data type: `Optional[String[1]]`
+
+The entire contents of the /etc/dhcpd.conf configuration file
+
+* If this is set, `$enable_data_rsync` will be forced to `false`
+
+Default value: `undef`
 
 ##### `firewall`
 
 Data type: `Boolean`
 
-Whether or not to include the SIMP iptables class.
+Whether or not to include the SIMP iptables class
 
 Default value: simplib::lookup('simp_options::firewall', { 'default_value' => false })
 
@@ -74,7 +97,7 @@ Default value: simplib::lookup('simp_options::firewall', { 'default_value' => fa
 
 Data type: `Boolean`
 
-Whether or not to include the SIMP logrotate class.
+Whether or not to include the SIMP logrotate class
 
 Default value: simplib::lookup('simp_options::logrotate', { 'default_value' => false })
 
@@ -82,13 +105,13 @@ Default value: simplib::lookup('simp_options::logrotate', { 'default_value' => f
 
 Data type: `Boolean`
 
-Whether or not to include the SIMP rsyslog class.
+Whether or not to include the SIMP rsyslog class
 
 Default value: simplib::lookup('simp_options::syslog', { 'default_value' => false })
 
 ##### `package_ensure`
 
-Data type: `String`
+Data type: `String[1]`
 
 The ensure status of the dhcp package
 
@@ -96,7 +119,7 @@ Default value: simplib::lookup('simp_options::package_ensure', { 'default_value'
 
 ##### `rsync_source`
 
-Data type: `String`
+Data type: `String[1]`
 
 
 
