@@ -1,0 +1,38 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
+HOSTS:
+  oel7:
+    roles:
+      - server-el7
+      - default
+    platform: el-7-x86_64
+    box: onyxpoint/oel-7-x86_64
+    hypervisor: <%= hypervisor %>
+
+  oel6:
+    roles:
+      - server-el6
+    platform: el-6-x86_64
+    box: onyxpoint/oel-6-x86_64
+    hypervisor: <%= hypervisor %>
+
+  oel8:
+    roles:
+      - server-el8
+    platform: el-8-x86_64
+    box: generic/oracle8
+    hypervisor: <%= hypervisor %>
+
+CONFIG:
+  log_level: verbose
+  type: aio
+  vagrant_memsize: 256
+  synced_folder: disabled
+<% if ENV['BEAKER_PUPPET_ENVIRONMENT'] -%>
+  puppet_environment: <%= ENV['BEAKER_PUPPET_ENVIRONMENT'] %>
+<% end -%>
